# ExpressionParsing

./: .gitignore  CMakeLists.txt  ExpressionParsingConfig.cmake  README.md
include/: _letter_utils.h  dictionary.h  expr_token.h  expression_parsing.h  expression_particle.h  expression_segment.h  expression_tree.h  final_token.h  flat_expression_tree.h  parse_utils.h  scenery.h  tokenizer.h  tree_tokenizer.h  validator.h
src/: dictionary.cpp  expr_token.cpp  expression_particle.cpp  expression_tree.cpp  final_token.cpp  flat_expression_tree.cpp  parse_utils.cpp  tree_tokenizer.cpp  validation.cpp
test/: Timer.cpp  _print_stl.h  benchmark.h  coloured_printer.h  encoder.h  encoding_test.h  main.cpp  tests.h  tree_tests.h
